<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/include_header"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="DID"
            android:layout_width="100dp"
            android:layout_height="50dp" />
        <EditText
            android:id="@+id/et_did"
            android:hint="@string/edit_did_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="username"
            android:layout_width="100dp"
            android:layout_height="50dp" />
        <EditText
            android:id="@+id/et_name"
            android:hint="@string/edit_username_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="password"
            android:layout_width="100dp"
            android:layout_height="50dp" />
        <EditText
            android:id="@+id/et_pwd"
            android:hint="@string/edit_pwd_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </LinearLayout>

</LinearLayout>
