<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/include_header"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="SSID"
            android:layout_width="100dp"
            android:layout_height="50dp" />
        <EditText
            android:id="@+id/wifi_name"
            android:maxLines="1"
            android:hint="@string/wifi_name_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="password"
            android:layout_width="100dp"
            android:layout_height="50dp" />
        <EditText
            android:id="@+id/wifi_pwd"
            android:maxLines="1"
            android:hint="@string/wifi_pwd_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />
    </LinearLayout>


    <Button
        android:onClick="play"
        android:layout_marginTop="20dp"
        android:text="@string/play"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:fadeScrollbars="false"
        android:scrollbars="vertical">
        <TextView
            android:id="@+id/tv_callback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>
